* quick post-launch fix for site logo in dark mode * fix for account page showing cancelled subscriptions in subs list + links

--- a/assets/css/components/account.pcss
+++ b/assets/css/components/account.pcss
@@ -7,7 +7,8 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
     column-gap: 1em;
-    .patron-message {
+    .patron-message,
+    .status-canceled {
         display: none;
     }
 }
